# libaprsroute

./: .gitignore  README.md  SECURITY.md  aprsroute.hpp  install_dependencies.sh
.github/workflows/: cmake-clang.yml  codeql-analysis.yml
examples/android_basic/APRSRouterDemo/: settings.gradle.kts
examples/android_basic/APRSRouterDemo/app/: build.gradle.kts
examples/android_basic/APRSRouterDemo/app/src/main/: AndroidManifest.xml
examples/android_basic/APRSRouterDemo/app/src/main/cpp/: CMakeLists.txt  aprsroute.hpp  aprsrouter.cpp
examples/android_basic/APRSRouterDemo/app/src/main/java/com/example/aprsrouter/: MainActivity.kt
examples/android_basic/APRSRouterDemo/app/src/main/java/com/example/aprsrouter/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/android_basic/APRSRouterDemo/app/src/main/res/values/: themes.xml
examples/android_basic/APRSRouterDemo/app/src/test/java/com/example/aprsrouter/: ExampleUnitTest.kt
examples/android_basic/APRSRouterDemo/gradle/wrapper/: gradle-wrapper.properties
examples/android_kotlin/APRSRouterDemo/app/src/androidTest/java/com/example/aprsrouter/: ExampleInstrumentedTest.kt
examples/android_kotlin/APRSRouterDemo/app/src/main/cpp/: CMakeLists.txt  aprsrouter.cpp
examples/android_kotlin/APRSRouterDemo/app/src/main/res/values/: strings.xml
examples/basic/: CMakeLists.txt  main.cpp
examples/digipeater/: CMakeLists.txt  common.cpp  common.h  digipeater.cpp  digipeater.h  log.cpp  log.h  main.cpp
examples/dot_net_basic/: DotNetRouter.sln
examples/dot_net_basic/DotNetRouter/: DotNetRouter.csproj  Program.cs
examples/dot_net_basic/DotNetRouter/Properties/: launchSettings.json
examples/dot_net_basic/RouterDll/: RouterDll.vcxproj  RouterDll.vcxproj.filters  router.cpp
examples/esp32_basic/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/esp32_basic/main/: CMakeLists.txt  blink_example_main.cpp
examples/node_basic/: CMakePresets.json  app.js  main.cpp  package.json
examples/pico_basic/: CMakeLists.txt  pico_basic.cpp
examples/python_basic/: CMakeLists.txt  route.py
examples/tnc4_basic/: README.md  example.patch  install_dependencies.sh
tests/: CMakeLists.txt  CMakePresets.json  auto_tests.cpp  compile_in_tu.cpp  external_custom_packet_test.cpp  external_packet_test.cpp  generate_unique_id.py  no_heap_test.cpp  pch.h  routes.cpp  routes.h  routes.json  set_cpp17_std.cpp  stress_test.cpp  tests.cpp  use_in_other_tu.cpp  use_in_tu.cpp  use_in_tu.h  with_etl.cpp  with_etl_string.cpp  with_etl_vector.cpp  with_pmr.cpp  without_pmr.cpp
